--- a/Romanian/main/MiuiScanner.apk/res/values-ro/strings.xml
+++ b/Romanian/main/MiuiScanner.apk/res/values-ro/strings.xml
@@ -234,6 +234,7 @@
     <string name="document_title">Fotografiați documentul</string>
     <string name="document_top_panel_title">Fotografie a documentului</string>
     <string name="done">Terminat</string>
+    <string name="drag_barcode_into_frame">Aranjați rama astfel încât să acopere codul</string>
     <string name="email">E-mail:</string>
     <string name="error_camera_disabled">Accesul la Cameră a fost restricționat din motive de securitate</string>
     <string name="error_cannot_connect_camera">"Nu se poate conecta Camera"</string>
